adding link and custom style

--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>@desapol | PAERGUCA</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  Mi pagina web en GitHub
+  <section class="hero is-primary is-medium">
+    <div class="hero-head">
+      <header class="nav">
+        <div class="container">
+          <div class="nav-left">
+            <a href="#" class="nav-item">
+              <img src="assets/img/logo.png" alt="PAERGUCA" class="logo">
+            </a>
+          </div>
+          <div class="nav-right nav-menu">
+            <a href="https://github.com/desapol" target="_blank" class="nav-item">Github</a>
+          </div>
+        </div>
+      </header>
+    </div>
+  </section>
 </body>
 </html>
