--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <img src="assets/img/logo.png" alt="PAERGUCA" class="logo">
             </a>
           </div>
-          <div class="nav-right nav-menu">
+          <div class="nav-right">
             <a href="https://github.com/desapol" target="_blank" class="nav-item">Github</a>
           </div>
         </div>
